# ProjectOrchestrator

./: AGENTS.md  API_Key.txt  README.md  _Project_Plans_.txt  change_log.json  change_log.txt  config.json  project_update_orchestrator_updated.py  pyproject.toml  requests.json  update_manifest.json
FDTO/: Full_Directory_Text_Output.py
project_orchestrator/: __main__.py
project_orchestrator/adapters/: git_adapter.py  subprocess_runner.py
project_orchestrator/cli/: main.py
project_orchestrator/domain/: models.py
project_orchestrator/gui/: main_window.py
project_orchestrator/persistence/: json_store.py
project_orchestrator/resources/: sample_project_profile.json  sample_stage_plan.json
project_orchestrator/schemas/: project_profile.schema.json  task_packet.schema.json
project_orchestrator/services/: paths.py  project_service.py  prompt_service.py  task_packet_service.py  validation_service.py
project_orchestrator/templates/: codex_handoff_prompt.md  codex_task.md  review_request.md  validation_report.md
project_orchestrator/validators/: file_scope.py
prompts/: request_0002_prompt_v0001.txt
